--- a/prometheus-cassandra-exporter/templates/service.yaml
+++ b/prometheus-cassandra-exporter/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "cassandra-exporter.fullname" . }}
+  name: {{ include "prometheus-cassandra-exporter.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "cassandra-exporter.labels" . | nindent 4 }}
+    {{- include "prometheus-cassandra-exporter.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -13,4 +13,4 @@ spec:
       protocol: TCP
       name: metrics
   selector:
-    {{- include "cassandra-exporter.selectorLabels" . | nindent 4 }}
+    {{- include "prometheus-cassandra-exporter.selectorLabels" . | nindent 4 }}
