--- a/prometheus-rabbitmq-exporter/values.yaml
+++ b/prometheus-rabbitmq-exporter/values.yaml
@@ -14,17 +14,17 @@ service:
   type: ClusterIP
   externalPort: 9419
   internalPort: 9419
-resources: 
+resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   limits:
-   cpu: 100m
-   memory: 128Mi
+    cpu: 100m
+    memory: 128Mi
   requests:
-   cpu: 50m
-   memory: 64Mi
+    cpu: 50m
+    memory: 64Mi
 
 priorityClassName: ""
 
@@ -41,7 +41,7 @@ rabbitmq:
   password: ""
   # If existingPasswordSecret is set then password is ignored
   existingPasswordSecret:
-  existingPasswordSecretKey: 
+  existingPasswordSecretKey:
   capabilities: bert,no_sort
   include_queues: ".*"
   include_vhost: ".*"
@@ -66,15 +66,14 @@ annotations: {}
 
 serviceMonitor:
   enabled: true
-  additionalLabels: {}
+  additionalLabels:
+    release: kube-prometheus-stack
   interval: 60s
   scrapeTimeout: 10s
   namespace: []
 
-prometheusRule:
+alerts:
   enabled: true
-  additionalLabels:
-    prometheusRule: gemcloud
 
 serviceAccount:
   # Specifies whether a ServiceAccount should be created
