--- a/mongodb/Chart.yaml
+++ b/mongodb/Chart.yaml
@@ -15,6 +15,7 @@ home: https://github.com/bitnami/charts/tree/master/bitnami/mongodb
 icon: https://bitnami.com/assets/stacks/mongodb/img/mongodb-stack-220x234.png
 keywords:
   - nosql
+  - database
 maintainers:
   - email: containers@bitnami.com
     name: Bitnami
