🎈 perf(exporter): remove servicemonitor kube-prometheus-stack label

--- a/prometheus-elasticsearch-exporter/values.yaml
+++ b/prometheus-elasticsearch-exporter/values.yaml
@@ -214,8 +214,7 @@ serviceMonitor:
   ## https://github.com/coreos/prometheus-operator
   ##
   enabled: true
-  labels:
-    release: kube-prometheus-stack
+  labels: {}
   interval: 60s
   scrapeTimeout: 10s
   scheme: http
