--- a/prometheus-memcached-exporter/values.yaml
+++ b/prometheus-memcached-exporter/values.yaml
@@ -71,8 +71,7 @@ serviceMonitor:
   # Set path to redis-exporter telemtery-path
   telemetryPath: /metrics
   # Set labels for the ServiceMonitor, use this to define your scrape label for Prometheus Operator
-  labels:
-    release: kube-prometheus-stack
+  labels: {}
   # Set timeout for scrape
   timeout: 10s
   
