--- a/prometheus-mongodb-exporter/values.yaml
+++ b/prometheus-mongodb-exporter/values.yaml
@@ -95,8 +95,7 @@ serviceMonitor:
   enabled: true
   interval: 60s
   scrapeTimeout: 10s
-  additionalLabels:
-    release: kube-prometheus-stack
+  additionalLabels: {}
   targetLabels: []
   metricRelabelings: []
 
