--- a/prometheus-rabbitmq-exporter/values.yaml
+++ b/prometheus-rabbitmq-exporter/values.yaml
@@ -66,8 +66,7 @@ annotations: {}
 
 serviceMonitor:
   enabled: true
-  additionalLabels:
-    release: kube-prometheus-stack
+  additionalLabels: {}
   interval: 60s
   scrapeTimeout: 10s
   namespace: []
