--- a/prometheus-redis-exporter/values.yaml
+++ b/prometheus-redis-exporter/values.yaml
@@ -87,8 +87,7 @@ serviceMonitor:
   # Set of labels to transfer on the Kubernetes Service onto the target.
   # targetLabels: []
   # metricRelabelings: []
-  additionalLabels:
-    release: kube-prometheus-stack  
+  additionalLabels: {}
 
 # include prometheusrule groups and alertmanagerconfig routes
 alerts:
