--- a/prometheus-cassandra-exporter/values.yaml
+++ b/prometheus-cassandra-exporter/values.yaml
@@ -58,8 +58,7 @@ serviceMonitor:
   ##
   enabled: true
   #  namespace: monitoring
-  labels:
-    release: kube-prometheus-stack
+  labels: {}
   interval: 60s
   scrapeTimeout: 10s
   scheme: http
