--- a/prometheus-mysql-exporter/values.yaml
+++ b/prometheus-mysql-exporter/values.yaml
@@ -31,8 +31,7 @@ serviceMonitor:
   # additionalLabels is the set of additional labels to add to the ServiceMonitor
   path: /metrics
   scheme: http
-  additionalLabels:
-    release: kube-prometheus-stack
+  additionalLabels: {}
   jobLabel: ""
   targetLabels: []
   podTargetLabels: []
