--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,7 +105,7 @@ jobs:
 
       - name: Apply Charts job
         run: |
-          kubectl create job charts-uploader -n default --image=${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
+          kubectl create job appstore-charts -n default --image=${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
           sleep 60
 
       - name: Job Logs
